--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* --------------------------------------------- */
@@ -9,7 +10,24 @@
 header{
     height: 40px;
     background-color: black;
+    padding-top: 10px;
 }
+
+.header-bar{
+    text-align: right; 
+}
+
+.header-bar a{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    margin-right: 10px;
+    background-color: #4a4a4a;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+
 
 main{
     height: calc(100vh - 40px - 70px);
