--- a/css/style.css
+++ b/css/style.css
@@ -43,19 +43,31 @@ main{
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    
-   
+    flex-wrap: wrap;  
 }
 
 .box{
     width: 240px;
     height: 135px;
     margin-bottom: 15px;
-    background-color: red;
+    position: relative;
 }
 
+.box img{
+    width: 100%;
+    height: 100%;
+}
 
+.box span{
+    color: white;
+    background-color: #63707d;
+    padding: 5px;
+    font-size: 12px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    opacity: 0.7;
+}
 
 
 /* ------------------------------------------------------------- */
